feat(vault-secret-handoff): Stage 6 step 2b+3 — FFM downcalls written, PeerPidVerifier retired to dormant
Step 2b: implemented the FFM downcalls per spec.
- PeerPidVerifierLinux: getsockopt(SOL_SOCKET, SO_PEERCRED) → reads
  struct ucred { uint32 pid, uid, gid }. Constants and layout verified
  against a runtime C probe (sizeof=12, pid at offset 0, SOL_SOCKET=1,
  SO_PEERCRED=17).
- PeerPidVerifierMacOs: getsockopt(SOL_LOCAL=0, LOCAL_PEERPID=2) → reads
  pid_t (4 bytes). Code-reviewed; not runtime-tested from the Linux dev
  host.

Step 3: discovered during runtime testing that SO_PEERCRED only works on
AF_UNIX socket pairs — on AF_INET (TCP) loopback sockets the kernel
returns success but zero-fills the ucred. Same constraint applies on
macOS. Stage 6 uses TCP loopback (for Windows portability), so peer-PID
verification cannot work for this protocol.

The actual defense against the loopback-race attack in Stage 6 is the
per-launch checkCode in TaskFileParamsYaml.Task.checkCode (committed in
Step 1): a random 32-byte token written ONLY to the task-scoped params
file. A racing local attacker who wins the loopback connect can't
produce the right checkCode and the handoff aborts.

- PeerPidVerifier javadoc: marked DORMANT with rationale and pointer to
  future AF_UNIX usage. The FFM code is kept intact (correct as written;
  the limitation is the socket family).
- PeerPidVerifierTest: documents the TCP-loopback limitation in javadoc;
  test_peerPid_returnsCurrentPid_whenLocalConnectorIsSameJvm_onLinuxOrMac
  replaced with test_peerPid_isUntrustworthy_onTcpLoopback (asserts the
  call doesn't throw, makes no claim about the returned value).

All 25 existing unit tests still pass. Next: FunctionSecretChannel with
the check-code challenge protocol.